<resources>
    <string name="app_name">Bus System</string>
    <string name="title_activity_menu">menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User name</string>
    <string name="nav_header_subtitle">User@mail.ru.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_tickets">Tickets</string>
    <string name="menu_search">Search</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="about_application">About application</string>
    <string name="menu_edit_profile">Edit Profile</string>
    <string name="menu_bus_stations">Bus stations</string>
    <string name="menu_contacts">Contacts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>