<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_menu_search"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_tickets"
            android:icon="@drawable/ic_menu_tickets"
            android:title="@string/menu_tickets"/>
        <item
            android:id="@+id/nav_edit_profile"
            android:icon="@drawable/ic_user_settings"
            android:title="@string/menu_edit_profile"/>
        <item
            android:id="@+id/nav_bus_stations"
            android:icon="@drawable/ic_baseline_directions_bus_24"
            android:title="@string/menu_bus_stations" />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_menu_contact"
            android:title="@string/menu_contacts" />
    </group>

    <item android:title="General">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:title="Settings"
                android:icon="@drawable/ic_menu_settings"/>
            <item
                android:id="@+id/nav_signOut"
                android:title="Sign Out" />

        </menu>
    </item>
</menu>